fix(Layout): Scroll fixed on mobile

--- a/src/assets/styles/_4-elements.scss
+++ b/src/assets/styles/_4-elements.scss
@@ -27,7 +27,7 @@ body {
 
 main {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   position: fixed;
   display: flex;
   top: 0;
